# RayTracer

./: .gitignore  CMakeLists.txt  OBJLoader.cpp  README.md  XmlParser.cpp  ambientLight.cpp  camera.h  light.cpp  lodepng.cpp  main.cpp  material.cpp  mesh.cpp  mpi_dziala.cpp  parallelLight.h  pointLight.cpp  pointLight.h  ray.cpp  rayTracer.cpp  rayTracer.h  rotateX.h  rotateY.cpp  scene.cpp  scene.h  spotLight.cpp  spotLight.h  surface.cpp  transform.cpp  transform.h  translate.cpp  translate.h
include/: OBJLoader.h  XmlParser.h  ambientLight.h  camera.h  intersection.h  light.h  lodepng.h  material.h  materialSolid.h  materialTextured.h  mesh.h  ray.h  rayTracer.h  rotateX.h  rotateY.h  rotateZ.h  scale.h  scene.h  sceneBuilder.h  sphere.h  surface.h  transform.h  translate.h  vec3.h
scenes/: ex1.xml  example6.xml
src/: OBJLoader.cpp  XmlParser.cpp  camera.cpp  intersection.cpp  main.cpp  materialSolid.cpp  materialTextured.cpp  mesh.cpp  parallelLight.cpp  rayTracer.cpp  rotateX.cpp  rotateY.cpp  rotateZ.cpp  scale.cpp  scene.cpp  sceneBuilder.cpp  sphere.cpp  surface.cpp  transform.cpp  translate.cpp
